Fixed HUNO:337 : Apply & Clear buttons having alignment issue for Apply Filter option under Top Consultants

--- a/src/patient/styles/filter_consultants.scss
+++ b/src/patient/styles/filter_consultants.scss
@@ -18,7 +18,7 @@
     font-weight: 500;
     line-height: 17px;
     letter-spacing: -0.30000001192092896px;
-    margin: 24px;
+    margin: 20px;
     height: 40px;
   }
 
